--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "biome format --write src"
   },
   "dependencies": {
+    "@kkestell/typst": "0.13.1",
+    "jszip": "^3.10.1",
     "react": "^19",
     "react-dom": "^19",
-    "react-router-dom": "^7.8.2",
-    "@kkestell/typst": "0.13.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
